1. Applied various improvements based on the static code analysis in IntelliJ (removed unused imports). 2. Fixed problems with argumentsAllowedToBePassed not properly instantiated in the pre-compile version of JavaAOPTestCaseSettings 3. Fixed problem with missing format string in JavaArchUnitTestCase